Updated for the new users.conf format.

--- a/examples/users.conf
+++ b/examples/users.conf
@@ -1,2 +1,3 @@
-{'jemfinch': IrcUser(ignore=False, auth=None, password='f0ob4r', capabilities=set('owner', '#programming.op', '#arstechnica.op', '#linux.op'), hostmasks=['jemfinch!jemfinch@*.homenet.ohio-state.edu', 'jemfinch!~1@ts*.homenet.ohio-state.edu'])
-}
+(3, [IrcUser(ignore=False, password='f1c93691bda7ef8bfeabacf13491eb660f109a36', name='test', capabilities=UserCapabilitySet(['owner']), hostmasks=['test!user@host.domain.tld'])
+, IrcUser(ignore=False, password='qwerty', name='jemfinch', capabilities=UserCapabilitySet(['owner']), hostmasks=['jemfinch!~jfincher@dhcp065-024-075-056.columbus.rr.com'])
+, None])
