Use dh_python as suggested by jamessan.  Also make architecture "all".

--- a/debian/rules
+++ b/debian/rules
@@ -75,7 +75,7 @@ binary-arch: build install
 	dh_compress
 	dh_fixperms
 #	dh_perl
-#	dh_python
+	dh_python
 #	dh_makeshlibs
 	dh_installdeb
 	dh_shlibdeps
