--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Build-Depends: debhelper (>= 4.0.0), python (>= 2.3)
 Standards-Version: 3.6.0
 
 Package: supybot
-Architecture: any
-Depends: python (>= 2.3)
+Architecture: all
+Depends: ${python:Depends}
 Recommends: python-sqlite
 Suggests: python-twisted
 Description: A robust and user friendly Python IRC bot.
