New DocBook file for the capabilities doc, updated the Makefile correspondingly, also fixed a few minor things in the capabilities doc itself.

--- a/docs/DocBook/Makefile
+++ b/docs/DocBook/Makefile
@@ -1,8 +1,25 @@
 JADE=/usr/bin/jade
-STYLESHEET=/usr/share/sgml/docbook/stylesheet/dsssl/modular/html/docbook.dsl
+JADETEX=/usr/bin/jadetex
+DVIPDF=/usr/bin/dvipdfm
+HTMLSTYLESHEET=/usr/share/sgml/docbook/stylesheet/dsssl/modular/html/docbook.dsl
+PRINTSTYLESHEET=/usr/share/sgml/docbook/stylesheet/dsssl/modular/print/docbook.dsl 
 
-example: example.sgml 
-	$(JADE) -t xml -d $(STYLESHEET) $<
+html: example.sgml capabilities.sgml
+	$(JADE) -t xml -d $(HTMLSTYLESHEET) $<
+
+example.dvi: example.sgml
+	$(JADE) -t tex -d $(PRINTSTYLESHEET) $<
+	$(JADETEX) $(addsuffix .tex, $(basename $<))
+
+example.pdf: example.dvi
+	$(DVIPDF) -o $(addsuffix .pdf, $(basename $<)) $<
+
+capabilities.dvi: capabilities.sgml
+	$(JADE) -t tex -d $(PRINTSTYLESHEET) $<
+	$(JADETEX) $(addsuffix .tex, $(basename $<))
+
+capabilities.pdf: capabilities.dvi
+	$(DVIPDF) -o $(addsuffix .pdf, $(basename $<)) $<
 
 clean:
 	rm -f *.html
