--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: supybot
 Section: net
 Priority: optional
 Maintainer: Jonathan Hseu <vomjom@debian.org>
-Build-Depends: debhelper (>= 4.0.0), python (>= 2.3)
+Build-Depends: debhelper (>= 4.0.0), python (>= 2.3), python-dev (>= 2.3)
 Standards-Version: 3.6.0
 
 Package: supybot
