--- a/debian/rules
+++ b/debian/rules
@@ -1,87 +1,15 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# GNU copyright 1997 to 1999 by Joey Hess.
-# Modified for supybot by Jonathan Hseu
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/python-distutils.mk
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+DEB_INSTALL_MANPAGES_supybot := debian/supybot-adduser.1 debian/supybot-newplugin.1\
+	debian/supybot.1 debian/supybot-wizard.1
 
+build/supybot::
+	docbook-to-man debian/manpage_supybot-adduser.sgml > debian/supybot-adduser.1
+	docbook-to-man debian/manpage_supybot-newplugin.sgml > debian/supybot-newplugin.1
+	docbook-to-man debian/manpage_supybot.sgml > debian/supybot.1
+	docbook-to-man debian/manpage_supybot-wizard.sgml > debian/supybot-wizard.1
 
-
-
-CFLAGS = -Wall -g
-
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	# Add here commands to configure the package.
-
-	touch configure-stamp
-
-
-build: build-stamp
-
-build-stamp: configure-stamp 
-	dh_testdir
-
-	# Add here commands to compile the package.
-
-	touch build-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp
-
-	# Add here commands to clean up after the build process.
-	python setup.py clean --all
-
-	dh_clean 
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	dh_installdirs
-
-	# Add here commands to install the package into debian/supybot.
-	python setup.py install --prefix=$(CURDIR)/debian/supybot/usr
-
-
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs ChangeLog
-	dh_installdocs
-	dh_installexamples
-#	dh_install
-#	dh_installmenu
-#	dh_installdebconf	
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-#	dh_installinit
-#	dh_installcron
-#	dh_installinfo
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-#	dh_perl
-	dh_python
-#	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
+clean::
+	-rm -f $(DEB_INSTALL_MANPAGES_supybot)
